# k_os

./: .gitignore  Cargo.toml  LICENSE  README.md
arch/x86_64/: Cargo.toml  README.md  kernel-x86_64.json  kernel-x86_64.lds
arch/x86_64/.cargo/: config.toml
arch/x86_64/boot/grub/: grub.cfg
arch/x86_64/src/: apic.rs  asm.rs  boot.rs  cpu.rs  desc.rs  gdt.rs  idt.rs  ioapic.rs  linker.rs  main.rs  mm.rs  mp.rs  panic.rs  percpu.rs  pic.rs  smp.rs  stacks.rs  thread.rs
arch/x86_64/src/apic/: registers.rs
arch/x86_64/src/boot/: early.rs  header.S  serial_console.rs  start.S  start16.S
arch/x86_64/src/idt/: handler.rs  traps.rs
arch/x86_64/src/ioapic/: registers.rs
arch/x86_64/src/mm/: consts.rs  desc.rs  map.rs  memory.rs  paging.rs
arch/x86_64/src/percpu/: atomic.rs
crates/acpi/: Cargo.toml  README.md
crates/acpi/src/: address.rs  fadt.rs  lib.rs  madt.rs  sdt.rs  structs.rs
crates/acpi/src/madt/: structs.rs
crates/kernel/: README.md
crates/kernel/src/: lib.rs
docs/: mm.md
docs/x86_64/: mm.md
src/acpi/src/: lib.rs  madt.rs  rsdp.rs  sdt.rs  structs.rs
src/acpi/src/madt/: structs.rs
src/arch/x86_64/: Cargo.toml  README.md  kernel-x86_64.json  kernel-x86_64.lds
src/arch/x86_64/.cargo/: config.toml
src/arch/x86_64/src/: asm.rs  desc.rs  idt.rs  interrupts.rs  linker.rs  main.rs  mm.rs  paging.rs  panic.rs
src/arch/x86_64/src/boot/: early.rs  gdt.S  head.S  header.S  mod.rs  multiboot2.S  start.S
src/arch/x86_64/src/interrupts/: handler.rs  idt.rs  mod.rs  (+1 more)
xtask/: Cargo.toml
xtask/src/: arch.rs  build.rs  flags.rs  main.rs  run.rs
(+4 files in other folders)
