[package]
name = "x86_64"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
default = ["hugepages"]
hugepages = []

[dependencies]
log = "0.4"
x86 = "0.52"
multiboot2 = "0.13"
uart_16550 = "0.2"
bitflags = "1.3"
heapless = "0.7"
generic_once_cell = "0.1"
lock_api = "0.4"
aligned = "0.4"

[dependencies.spin]
version = "0.9"
features = ["lock_api"]

[dependencies.itertools]
version = "0.10"
default-features = false

[dependencies.bitmaps]
version = "3.2"
default-features = false

[dependencies.kernel]
path = "../../crates/kernel"

[dependencies.acpi]
path = "../../crates/acpi"
